console logs the user informaiton on /user/profile
