# routes/auth.js
@@ -12,10 +12,16 @@ router.get(
   '/google/callback',
   passport.authenticate('google', { failureRedirect: '/' }),
   (req, res) => {
-    res.redirect('/api-docs')
+    res.redirect('/user/profile')
+    console.log(req.user)
   }
 )
 
-
+// @desc    Logout user
+// @route   /auth/logout
+router.get('/logout', (req, res) => {
+    req.logout()
+    res.redirect('/')
+  })
 
 module.exports = router
